--- a/Projects/portfolio/package.json
+++ b/Projects/portfolio/package.json
@@ -7,6 +7,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^8.10.1",
+    "firebase-tools": "^12.7.0",
+    "functions": "^1.0.9",
+    "init": "^0.1.2",
+    "login": "^0.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
