--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
+    "node": "^21.1.0",
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
