--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "loadash": "^1.0.0",
     "mysql2": "^3.6.0",
     "node": "^21.1.0",
     "prompt-sync": "^4.2.0"
